# DWH_Dags

./: .gitignore  README.md  config.json  hls_malformed.py  mypy.ini  pyproject.toml  requirements.txt
Dag_01/: hls_scraper.py
Dag_02/: hist_hub.py
Dag_03/: hls_cleaning.py
Dag_04/: nlp_tagger.py
Dag_05/: nlp_cleaning.py
Dag_06/: gmaps_scraper.py
airflow/dags/: config.json  dag.py
airflow/dags/hls/: __init__.py  clean_up_temp.py  config.json  data_base.py  flair_cleaning.py  gmaps.py  hhb_aggregation.py  hls_and_hhb_cleaning.py  hls_scrape.py  nlp_tagger.py  utility_logging.py
base/: gmaps_base.csv
